@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/ghostscript/ghostscript-0.ebuild,v 1.6 2008/01/25 19:41:42 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/ghostscript/ghostscript-0.ebuild,v 1.7 2009/05/26 05:59:39 pva Exp $
 
 DESCRIPTION="Virtual for Ghostscript"
 HOMEPAGE="http://www.ghostscript.com"
@@ -12,7 +12,5 @@ IUSE=""
 DEPEND=""
 RDEPEND="|| (
 		app-text/ghostscript-gpl
-		>=app-text/ghostscript-esp-8
 		app-text/ghostscript-gnu
-		app-text/ghostscript-esp
 	)"
