@@ -1,6 +1,10 @@
 # ChangeLog for virtual/ghostscript
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/ghostscript/ChangeLog,v 1.7 2008/01/25 19:41:42 grobian Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/ghostscript/ChangeLog,v 1.8 2009/05/26 05:59:39 pva Exp $
+
+  26 May 2009; Peter Volkov <pva@gentoo.org> ghostscript-0.ebuild:
+  Removing app-text/ghostscript-esp from dependecies, it'll be removed from
+  the tree, bug #261434.
 
   25 Jan 2008; Fabian Groffen <grobian@gentoo.org> ghostscript-0.ebuild:
   Dropped ppc-macos keyword, see you in prefix
